--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -99,4 +99,12 @@
   year={2017}
 }
 
+@online{mailabs,
+  author  = {Imdat Solak},
+  title   = {The M-AiLabs Speech Dataset},
+  url     = {https://www.caito.de/2019/01/03/the-m-ailabs-speech-dataset/}
+  }
+
+
+
 
