--- a/thesis-main/document/MainMatter/Proposal.tex
+++ b/thesis-main/document/MainMatter/Proposal.tex
@@ -1,38 +1,88 @@
 \chapter{Propuesta}\label{chapter:proposal}
 
-Con el objetivo de lograr una síntesis de voz satisfactoria y después de realizar un estudio de las tecnologías que se utilizan para este fin, se elige Coqui TTS como herramienta base.
+Con el objetivo de lograr una síntesis de voz satisfactoria y después de realizar un estudio de las tecnologías que se utilizan para este fin, se elige Coqui TTS como herramienta base. Coqui cuenta con una gran variedad de modelos preentrenados en más de 20 idiomas.  
+El primer paso en el desarrollo del sintetizador fue instalar la biblioteca Coqui TTS, de acuerdo a las indicaciones del repositorio oficial[\cite{coqui-doc}]. Se realizó un estudio del comportamiento de combinaciones de parejas modelo TTS y VoCoder, para evaluar cuáles ofrecían mejores resultados:
 
-Coqui cuenta con una gran variedad de modelos preentrenados en más de 20 idiomas, como primer paso se instala la biblioteca y se realiza un estudio del comportamiento de algunos de los modelos TTS y VoCoder disponibles para evaluar cuál ofrece mejores resultados:
+(Poner aqui los diagramitas)\\
 
-(Poner aqui los diagramitas)
 
-Los modelos \textbf{Tacotron2-DDC,Fast-pitch y Glow-tts} preentrenados en idioma inglés al combinarse con los VoCoders señalados en las figuras(citar figuras) para un texto en español arrojan un discurso con una pronunciación propia de una persona de habla inglesa hablando español.
+Los modelos \textbf{Tacotron2-DDC,Fast-pitch y Glow-tts} preentrenados en idioma inglés al combinarse con VoCoders, como se observa en las figuras(citar figuras) para un texto en español arroja distintos resultados, en algunos casos solo producen ruido mientras que los más satisfactorios, producen un discurso con una pronunciación propia de una persona de habla inglesa hablando español.
 
-Coqui solo cuenta con un modelo preentrenado en español, el \textbf{Tacontron-DDC} entrenado sobre la base de Datos de MAI-Labs; el cual fue probado junto a los VoCoders preentrenados que se muestran en la figura X. Los mejores resultados fueron arrojados por el modelo Univnet entrenado sobre una base de datos Ljspeech y Wavegrad entrenado sobre el conjunto de datos LibriTTS, aunque ambos presentan problemáticas como la mala pronunciación de la letra ñ.\\
+Por otro lado Coqui solo cuenta con un modelo preentrenado en español, el \textbf{Tacontron-DDC}, que está entrenado sobre la base de datos de M-AILABS[\cite{mailabs}]; este modelo fue probado junto a los VoCoders preentrenados como se muestra en la figura X. Los mejores resultados fueron arrojados por las combinaciones de \textbf{Tacontron-DDC} con los modelos: Univnet entrenado sobre la base de datos Ljspeech en inglés, y Wavegrad entrenado sobre el conjunto de datos LibriTTS, aunque ambos presentan problemáticas como la mala pronunciación de la letra ñ.\\
 
-De acuerdo con la documentación de Coqui, y con la problemática que consiste en desarrollar un sintetizador de voz en español, con voz cubana, se pueden considerar tres enfoques:
+De acuerdo con la documentación de Coqui, y con el objetivo de la investigación que consiste en desarrollar un sintetizador de voz en español con voz cubana, se consideraron tres enfoques:
 
 \begin{enumerate}
-	\item Realizar un \textit{fine-tuning} o reentrenamiento a un modelo preentrenado, en este caso \textbf{Tacontron-DDC}, que es el único disponible en español. 
+	\item Realizar un \textit{fine-tuning} o reentrenamiento a un modelo preentrenado de [\cite{coqui-doc}], en este caso \textbf{Tacontron-DDC}, que es el único disponible en español. 
 	
-	\item Realizar el entrenamiendo desde cero, en este caso se podría entrenar cualquier modelo. \textbf{Glow-TTS y VITS} son buenos candidatos pues generan resultados bastante buenos. Una desventaja es que cae una gran responsabilidad sobre el conjunto de datos de entrenamiento, pues debe tener una gran riqueza y muchos clips de audio.
+	\item Realizar el entrenamiendo desde cero de un modelo; en este caso se podría entrenar cualquier modelo disponible. \textbf{Glow-TTS y VITS} son buenos candidatos pues en general producen resultados bastante satisfactorios. Una desventaja es que cae una gran responsabilidad sobre el conjunto de datos de entrenamiento, pues debe tener una gran riqueza y muchos clips de audio.
 	
 	\item La problemática del tamaño de la base de datos puede resolverse entrenando el modelo \textbf{YourTTS}, que según la literatura, es capaz de adaptarse a una nueva voz con muy poco tiempo de audio.
 \end{enumerate}
 
-Luego de tener entrenado el modelo acústico(tts) con una base de datos construida con voces cubanas, es posible que alguno de los VoCoders preentrenados disponibles produzca una salida con las características deseadas, en caso contrario se debería entrenar el VoCoder con los datos del \textit{dataset} construido.\\
+Se propone desarrollar el primer enfoque: reentrenando el modelo \textbf{Tacontron-DDC} en español, pues trae ventajas tales como un aprendizaje más rápido, ya que un modelo preentrenado ya tiene aprendidas funcionalidades que son relevantes para la tarea de producir un discurso. Convergerá más rápido en el nuevo \textit{dataset}, lo que reducirá el costo de entrenamiento y permitirá el proceso de experimentación más rápidamente. Además se pueden obtener buenos resultados con un conjunto de datos más pequeño.  \\
 
-Se propone desarrollar el primer enfoque: reentrenando el modelo \textbf{Tacontron-DDC} en español. Este camino trae ventajas tales como un aprendizaje más rápido, ya que un modelo preentrenado ya tiene aprendidas funcionalidades que son relevantes para la tarea de producir un discurso. Convergerá más rápido en el nuevo \textit{dataset}, lo que reducirá el costo de entrenamiento y permitirá el proceso de experimentación más rápidamente. Además se pueden obtener buenos resultados con un conjunto de datos más pequeño.  
+Luego de tener entrenado el modelo acústico(tts) con una base de datos construida con voces cubanas, es posible que alguno de los VoCoders preentrenados disponibles produzca una salida con las características deseadas, en caso contrario se debería entrenar el VoCoder con los datos del \textit{dataset} construido.
 
-\section{Reentrenamiendo Tacontron-DDC}
+\section{Reentrenamiendo para el ajuste de Tacontron-DDC}
 
 El reentrenamiento(\textit{fine-tuning} en inglés), toma un modelo previamente entrenado y lo vuelve a entrenar para mejorar su rendimiento en una tarea o conjunto de datos diferente.
 
 \subsection{Creación de la base de datos}
 
-En primera instancia se debe construir una base con voces cubanas. El conjunto de datos debe poseer un formato específico para que el cargador de datos de Coqui TTS sea capaz de   
+Para entrenar un modelo TTS, se necesita un conjunto de datos con grabaciones y transcripciones de voz, en este caso fue una base de datos en español con voces cubanas. El discurso debe dividirse en clips de audio y cada clip necesita su transcripción correspondiente. Debe poseer un formato específico de forma tal que el cargador de datos de Coqui TTS sea capaz de cargarlos para utilizar en el entrenamiento.    
 
-           
+La base de datos conformanda debe tener una buena cobertura del idioma en el que se desea entrenar el modelo, en este caso el Español. Debe cubrir la variedad fonémica, los sonidos excepcionales y las sílabas. 
+
+\subsubsection{Qué hace a un buen Dataset?}
+
+\begin{itemize}
+	\item Debe cubrir una cantidad considerable de clips cortos y largos.
+	\item Libre de errores. Se debe eliminar cualquier archivo incorrecto o roto. 
+	\item Para escuchar una voz con la mayor naturalidad posible con todas las diferencias de frecuencia y tono, por ejemplo, usando diferentes signos de puntuación.
+	\item Es necesario que el \textit{dataset} cubra una buena parte de fonemas, difonemas y, en algunos idiomas, trifonemas. Si la cobertura de fonemas es baja, el modelo puede tener dificultades para pronunciar nuevas palabras difíciles.
+	
+\end{itemize}
+
+Los clips de audio poseen formato .wav con una frecuencia de 16000Hz, y se organizan dentro de una carpeta de nombre \textit{wavs} de la siguiente forma:
+
+\begin{center}
+	/wavs\\
+	| - audio1.wav\\
+	| - audio1.wav\\
+	| - audio2.wav\\
+	| - audio3.wav\\
+	...
+\end{center}
+
+Las transcripciones se recogen dentro del archivo metadata.csv. Donde audio1, audio2, etc se refieren a los archivos audio1.wav, audio2.wav etc.
+
+\begin{center}
+	audio1|Esta es mi transcripción 1.
+	
+	audio2|Esta es mi transcripción 2.
+	
+	audio3|Esta es mi transcripción 3.
+	
+	audio4|Esta es mi transcripción 4.
+\end{center}
+
+El modelo sobre el que realizaremos el ajuste, está preentrenado sobre la base de datos en Español de \textit{The M-AiLabs Speech Dataset}, por tanto utilizaremos la misma estructura de este en la conformación de la base de datos con voces cubanas. Finalmente queda la siguiente estructura:
+
+\begin{flushleft}
+	MyDataset/by$\_$book/female/[creador del dataset]/[nombre del hablante]
+	
+	|/wavs
+	
+	|metadata.csv
+\end{flushleft}
+	
+	
+
+
+
+
+
 
 
 
