Upload updates in proposal

--- a/thesis-main/document/MainMatter/Implementation.tex
+++ b/thesis-main/document/MainMatter/Implementation.tex
@@ -1,1 +1,8 @@
 \chapter{Detalles de Implementación y Experimentos}\label{chapter:implementation}
+
+
+\section{Creación de base de datos con voces cubanas.}
+
+\textbf{Cuban Voice Dataset}\\
+La base de datos está conformada por 160 clips de audio
+
