--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -106,5 +106,9 @@
   }
 
 
-
+@online{formatting-dataset,
+  author  = {Coqui TTS},
+  title   = {Formatting Your Dataset},
+  url     = {https://tts.readthedocs.io/en/latest/formatting_your_dataset.html#formatting-your-dataset}
+  }
 
