--- a/thesis-main/document/MainMatter/Introduction.tex
+++ b/thesis-main/document/MainMatter/Introduction.tex
@@ -1,16 +1,17 @@
 \chapter*{Introducción}\label{chapter:introduction}
 \addcontentsline{toc}{chapter}{Introducción}
 
-La era de la informática conversacional está cambiando la forma en la que interactuamos con nuestros dispositivos: el Asistente de Google busca en Internet y lee las instrucciones sobre cómo preparar un pastel, Siri nos guía en la búsqueda de un lugar desconocido, las líneas automatizadas de servicio al cliente operan sin necesidad de esperas o botones; todo esto es posible gracias a la tecnología digital llamada texto a voz o TTS por sus siglas en inglés. \\
+La era de la informática conversacional está cambiando la forma en la que interactuamos con nuestros dispositivos: el Asistente de Google busca en Internet y lee las instrucciones sobre cómo preparar un pastel, Siri nos guía en la búsqueda de un lugar desconocido, las líneas automatizadas de servicio al cliente operan sin necesidad de esperas o botones. Uno de los primeros problemas que alguien se plantearía es la comunicación con los dispositivos, y es que no es posible determinar de qué forma va a
+interactuar una persona con estos. Se pueden hacer aproximaciones y suposiciones, pero cada persona puede decidir operar de una forma diferente, y sería imposible que un actor de voz grabase infinitas respuestas a las ramas de conversación que pueden surgir de una simple pregunta. En este punto entra la síntesis de voz, si en vez de unas grabaciones, el dispositivo pudiese sintetizar una voz humana, podría responder y hablar con la persona, entablando una especie de conversación.\\
+
+%todo esto es posible gracias a la tecnología digital llamada texto a voz o TTS por sus siglas en inglés. \\
 
 
-La síntesis de voz es la producción artificial del habla humana, se han diseñado diferentes
-sistemas para este propósito, llamados sintetizadores de voz y pueden ser implementados tanto
-en hardware como en software. 
+La síntesis de voz es la producción artificial del habla humana, se han diseñado diferentes sistemas para este propósito, llamados sintetizadores de voz y pueden ser implementados tanto en hardware como en software. 
 
-Un sistema TTS (text to speech) o sintetizador de voz toma como entrada texto y produce voz audible como salida. Este sistema de conversión, se compone básicamente por dos componentes: un modelo que predice generalmente en forma de espectograma la mejor pronunciación posible de cualquier texto dado, y un codificador de voz que, a partir del espectograma anterior produce ondas sonoras de voz.\\
+Un sistema texto a voz (\textit{text to speech},TTS) o sintetizador de voz toma como entrada texto y produce voz audible como salida. Este sistema de conversión, se compone básicamente por dos componentes: un modelo que predice generalmente en forma de espectograma la mejor pronunciación posible de cualquier texto dado, y un codificador de voz que, a partir del espectograma anterior produce ondas sonoras de voz.\\
 
-El \textit{texto a voz} es un campo particularmente disciplinario, que requiere un conocimiento
+El texto a voz es un campo particularmente disciplinario, que requiere un conocimiento
 detallado en una variedad de ciencias. Si se quisiera construir un sistema TTS desde cero, se tendrían que estudiar los siguientes temas:
 
 \begin{itemize}
@@ -26,13 +27,13 @@ detallado en una variedad de ciencias. Si se quisiera construir un sistema TTS d
 Hasta la actualidad se han desarrollado variadas tecnologías TTS, las cuales operan de maneras distintas y se basan en diferentes ideas. Entre las más dominantes se encuentran: 
 
 \begin{enumerate}
-	\item  Síntesis de formantes y síntesis articulatoria: \\Los primeros sistemas TTS empleaban tecnologías basadas en reglas, como la \textit{síntesis de formantes} y la \textit{síntesis articulatoria}, que logró un resultado similar a través de estrategias ligeramente diferentes. A partir de una grabación realizada a un hablante, se extrajeron características acústicas de este: formantes, cualidades definitorias de los sonidos del habla, en síntesis de formantes; y forma de articulación (nasal, oclusiva,vocal,etc.) en síntesis articulatoria. Luego, se programarían reglas que recrearan estos parámetros con una señal de audio digital. Este TTS era bastante robótico; y estos enfoques necesariamente abstraen gran parte de la variación que se encontrará en el habla humana, cosas como la variación de tono, porque solo permiten a los programadores escribir reglas para unos pocos parámetros a la vez.
+	\item  Síntesis de formantes y síntesis articulatoria: \\Los primeros sistemas TTS empleaban tecnologías basadas en reglas, como la síntesis de formantes y la síntesis articulatoria, que logró un resultado similar a través de estrategias ligeramente diferentes. A partir de una grabación realizada a un hablante, se extrajeron características acústicas de este: formantes, cualidades definitorias de los sonidos del habla, en síntesis de formantes; y forma de articulación (nasal, oclusiva,vocal,etc.) en síntesis articulatoria. Luego, se programarían reglas que recrearan estos parámetros con una señal de audio digital. Este TTS era bastante robótico; y estos enfoques necesariamente abstraen gran parte de la variación que se encontrará en el habla humana, cosas como la variación de tono, porque solo permiten a los programadores escribir reglas para unos pocos parámetros a la vez.
 	
-	\item Síntesis de difonos: \\ El próximo gran desarrollo en el campo TTS se llama \textit{síntesis de difonos}, se inició en la década de 1970 y todavía era de uso popular durante los últimos años del siglo XX. La síntesis de difonos crea  un habla de máquina mediante la combinación de difonos, combinaciones de fonemas de una sola unidad, y las transiciones de un fonema al siguiente; es decir, no solo la /t/ en la palabra tierra sino la /t/ más la mitad del siguiente sonido /i/. 
+	\item Síntesis de difonos: \\ El próximo gran desarrollo en el campo TTS se llama síntesis de difonos, se inició en la década de 1970 y todavía era de uso popular durante los últimos años del siglo XX. La síntesis de difonos crea  un habla de máquina mediante la combinación de difonos, combinaciones de fonemas de una sola unidad, y las transiciones de un fonema al siguiente; es decir, no solo la /t/ en la palabra tierra sino la /t/ más la mitad del siguiente sonido /i/. 
 	
 	La tecnología TTS de síntesis de difonos incluye también modelos que predicen la duración y el tono de cada difono para la entrada dada. Estos dos sistemas se superponen el uno sobre el otro, primero conecta las señales de difono y luego procesa la señal para corregir el tono y la duración. El resultado es un discurso  sintético con un sonido más natural que el que crea la síntesis de formantes, pero aún está lejos de ser perfecto, y tiene pocas ventajas sobre cualquier otro acercamiento más que su tamaño. 
 	
-	\item Síntesis de selección de unidades: \\ La \textit{síntesis de selección de unidades}, constituye un enfoque ideal para los motores TTS de bajo impacto en la actualidad. Cuando la síntesis de difonos añadió duración y el tono apropiado a través de un segundo sistema de procesamiento, la síntesis de selección de unidad omite ese paso: se inicia con una gran base de datos grabados del habla, alrededor de 20 horas o más, y selecciona los fragmentos de sonido que ya tienen la duración y el tono. La síntesis de selección de unidades proporciona un habla similar a la humana sin mucha modificación de la señal, pero sigue siendo identificablemente artificial. Probablemente el audio de salida de la mejor selección de unidades sea indistinguible de las voces humanas reales, especialmente en contextos con sistemas TTS. Sin embargo, un mayor naturalidad requiere de bases de datos de selección de unidades muy grandes, en algunos sistemas llegando a ser de gigabytes de datos grabados, representando docenas de horas de voz. 
+	\item Síntesis de selección de unidades: \\ La síntesis de selección de unidades constituye un enfoque ideal para los motores TTS de bajo impacto en la actualidad. Cuando la síntesis de difonos añadió duración y el tono apropiado a través de un segundo sistema de procesamiento, la síntesis de selección de unidad omite ese paso: se inicia con una gran base de datos grabados del habla, alrededor de 20 horas o más, y selecciona los fragmentos de sonido que ya tienen la duración y el tono. La síntesis de selección de unidades proporciona un habla similar a la humana sin mucha modificación de la señal, pero sigue siendo identificablemente artificial. Probablemente el audio de salida de la mejor selección de unidades sea indistinguible de las voces humanas reales, especialmente en contextos con sistemas TTS. Sin embargo, un mayor naturalidad requiere de bases de datos de selección de unidades muy grandes, en algunos sistemas llegando a ser de gigabytes de datos grabados, representando docenas de horas de voz. 
 	
 	\item Síntesis neuronal: \\ La tecnología de las redes neuronales profundas es la que impulsa los avances actuales en el campo TTS, y es clave para la obtención de resultados mucho más realistas. Al igual que sus predecesores, el TTS neuronal comienza con grabaciones de voz; la otra entrada es texto, el guión escrito que su locutor de origen utilizó para crear esas grabaciones. Alimente estas entradas en una red neuronal profunda y aprenderá el mejor mapeo posible entre un bit de texto y las características acústicas asociadas. 
 	
