--- a/thesis-main/document/MainMatter/Implementation.tex
+++ b/thesis-main/document/MainMatter/Implementation.tex
@@ -4,5 +4,17 @@
 \section{Creación de base de datos con voces cubanas.}
 
 \textbf{Cuban Voice Dataset}\\
-La base de datos está conformada por 160 clips de audio
+La base de datos está conformada por 160 clips de audio con sus respectivas transcripciones recogidas en el archivo metadata.csv. Cada clip tiene una duración de 2 a 15 segundos. 
 
+Utilizando \textbf{RNNoise}, la cual es una biblioteca basada en una red neuronal para la eliminación de ruido en grabaciones, obtenemos clips de audio libres de ruidos y con la frecuencia de muestreo deseada.
+
+
+
+
+
+
+
+
+
+
+ 
